SERVER-16867 Allow logOp() to throw before calling first non-rollback-safe logOp listener.